--- a/_source/LigaCancer/LigaCancer.csproj
+++ b/_source/LigaCancer/LigaCancer.csproj
@@ -8,15 +8,19 @@
 
   <ItemGroup>
     <Compile Remove="lib\**" />
+    <Compile Remove="Logs\**" />
     <Compile Remove="wwwroot\dist\**" />
     <Compile Remove="wwwroot\lib\**" />
     <Content Remove="lib\**" />
+    <Content Remove="Logs\**" />
     <Content Remove="wwwroot\dist\**" />
     <Content Remove="wwwroot\lib\**" />
     <EmbeddedResource Remove="lib\**" />
+    <EmbeddedResource Remove="Logs\**" />
     <EmbeddedResource Remove="wwwroot\dist\**" />
     <EmbeddedResource Remove="wwwroot\lib\**" />
     <None Remove="lib\**" />
+    <None Remove="Logs\**" />
     <None Remove="wwwroot\dist\**" />
     <None Remove="wwwroot\lib\**" />
   </ItemGroup>
@@ -52,10 +56,10 @@
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.2.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.48" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
