#53 problems to release version

--- a/_source/LigaCancer/appsettings.json
+++ b/_source/LigaCancer/appsettings.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\;Database=rvcc;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": ""
   },
   "EmailSender": {
-    "Host": "smtp.sendgrid.net",
-    "Port": 587,
-    "EnableSSL": true,
-    "UserName": "apikey",
-    "EmailFrom": "naoresponda@rvcc.com",
-    "Password": "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"
+    "Host": "",
+    "Port": "",
+    "EnableSSL": "",
+    "UserName": "",
+    "EmailFrom": "",
+    "Password": ""
   },
   "Logging": {
     "LogLevel": {
