#94 Added Admin to admin area to add website together

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ _source/LigaCancer/Properties/PublishProfiles/
 _source/LigaCancer/wwwroot/uploads/
 _source/LigaCancer/wwwroot/dist/
 _source/LigaCancer/Logs/
+_design/CMS/
