#109 adjust on scripts

--- a/_source/LigaCancer/bundleconfig.json
+++ b/_source/LigaCancer/bundleconfig.json
@@ -53,6 +53,18 @@
       "renameLocals": true
     }
   },
+  /* Reset Password */
+  {
+    "outputFileName": "wwwroot/dist/js/reset-password.min.js",
+    "inputFiles": [
+      "wwwroot/admin/js/reset-password.js"
+    ],
+    "minify": {
+      "enabled": true,
+      "outputMode": "singleLine",
+      "renameLocals": true
+    }
+  },
   /* Patient */
   {
     "outputFileName": "wwwroot/dist/css/patient.min.css",
