#174 Changed createBy to save just the user name

--- a/_source/LigaCancer/appsettings.Development.json
+++ b/_source/LigaCancer/appsettings.Development.json
@@ -10,6 +10,10 @@
     "EmailFrom": "naoresponda@rvcc.com",
     "Password": "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"
   },
+  "Admin": {
+    "Email": "admin@admin.com",
+    "Password": "Admin123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
