--- a/_source/LigaCancer/appsettings.json
+++ b/_source/LigaCancer/appsettings.json
@@ -10,6 +10,10 @@
     "EmailFrom": "",
     "Password": ""
   },
+  "Admin": {
+    "Email": "",
+    "Password":  ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
