#155 added webpack and adjust doctor crud to use webpack

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ _source/LigaCancer/wwwroot/uploads/
 _source/LigaCancer/wwwroot/dist/
 _source/LigaCancer/Logs/
 _design/CMS/
+_source/LigaCancer/node_modules/
