--- a/_source/LigaCancer/RVCC.csproj
+++ b/_source/LigaCancer/RVCC.csproj
@@ -12,86 +12,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="lib\**" />
-    <Compile Remove="Logs\**" />
-    <Compile Remove="wwwroot\img\clients\**" />
-    <Compile Remove="wwwroot\img\portfolio\**" />
-    <Compile Remove="wwwroot\img\slider\**" />
-    <Compile Remove="wwwroot\img\team\**" />
-    <Compile Remove="wwwroot\img\testimonial\**" />
-    <Content Remove="lib\**" />
-    <Content Remove="Logs\**" />
-    <Content Remove="wwwroot\img\clients\**" />
-    <Content Remove="wwwroot\img\portfolio\**" />
-    <Content Remove="wwwroot\img\slider\**" />
-    <Content Remove="wwwroot\img\team\**" />
-    <Content Remove="wwwroot\img\testimonial\**" />
-    <EmbeddedResource Remove="lib\**" />
-    <EmbeddedResource Remove="Logs\**" />
-    <EmbeddedResource Remove="wwwroot\img\clients\**" />
-    <EmbeddedResource Remove="wwwroot\img\portfolio\**" />
-    <EmbeddedResource Remove="wwwroot\img\slider\**" />
-    <EmbeddedResource Remove="wwwroot\img\team\**" />
-    <EmbeddedResource Remove="wwwroot\img\testimonial\**" />
-    <None Remove="lib\**" />
-    <None Remove="Logs\**" />
-    <None Remove="wwwroot\img\clients\**" />
-    <None Remove="wwwroot\img\portfolio\**" />
-    <None Remove="wwwroot\img\slider\**" />
-    <None Remove="wwwroot\img\team\**" />
-    <None Remove="wwwroot\img\testimonial\**" />
+    <Compile Remove="logs\**" />
+    <Content Remove="logs\**" />
+    <EmbeddedResource Remove="logs\**" />
+    <None Remove="logs\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\dist\js\cancer-type.min.js" />
-    <None Include="wwwroot\dist\js\doctor.min.js" />
-    <None Include="wwwroot\dist\js\form.min.js" />
-    <None Include="wwwroot\dist\js\home.min.js" />
-    <None Include="wwwroot\dist\js\main.min.js" />
-    <None Include="wwwroot\dist\js\medicine.min.js" />
-    <None Include="wwwroot\dist\js\patient.min.js" />
-    <None Include="wwwroot\dist\js\presence.min.js" />
-    <None Include="wwwroot\dist\js\treatment-place.min.js" />
-    <None Include="wwwroot\dist\js\user.min.js" />
-    <None Include="wwwroot\js\coreui.min.js" />
-    <None Include="wwwroot\js\custom-tooltips.min.js" />
-    <None Include="wwwroot\css\custom.css" />
-    <None Include="wwwroot\css\style.css" />
-    <None Include="wwwroot\js\cancerType.js" />
-    <None Include="wwwroot\js\doctor.js" />
-    <None Include="wwwroot\js\home.js" />
-    <None Include="wwwroot\js\main.js" />
-    <None Include="wwwroot\js\medicine.js" />
-    <None Include="wwwroot\js\patient.js" />
-    <None Include="wwwroot\js\treatmentPlace.js" />
-    <None Include="wwwroot\js\user.js" />
-    <None Include="wwwroot\lib\bootstrap\js\bootstrap.min.js" />
-    <None Include="wwwroot\lib\chart-js\Chart.min.js" />
-    <None Include="wwwroot\lib\datatables-buttons-bs4\js\buttons.bootstrap4.min.js" />
-    <None Include="wwwroot\lib\datatables-buttons\js\buttons.html5.min.js" />
-    <None Include="wwwroot\lib\datatables-buttons\js\dataTables.buttons.min.js" />
-    <None Include="wwwroot\lib\datatables\js\dataTables.bootstrap4.min.js" />
-    <None Include="wwwroot\lib\datatables\js\jquery.dataTables.min.js" />
-    <None Include="wwwroot\lib\dropzone\min\dropzone.min.js" />
-    <None Include="wwwroot\lib\gijgo\combined\js\gijgo.min.js" />
-    <None Include="wwwroot\lib\gijgo\combined\js\messages\messages.pt-br.min.js" />
-    <None Include="wwwroot\lib\jeditable\jquery.jeditable.min.js" />
-    <None Include="wwwroot\lib\jquery-ajax-unobtrusive\dist\jquery.unobtrusive-ajax.min.js" />
-    <None Include="wwwroot\lib\jquery-mask\jquery.mask.min.js" />
-    <None Include="wwwroot\lib\jquery-validate\jquery.validate.min.js" />
-    <None Include="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
-    <None Include="wwwroot\lib\jquery\jquery.min.js" />
-    <None Include="wwwroot\lib\jszip\jszip.min.js" />
-    <None Include="wwwroot\lib\pdfmake\pdfmake.min.js" />
-    <None Include="wwwroot\lib\pdfmake\vfs_fonts.js" />
-    <None Include="wwwroot\lib\popper\umd\popper.min.js" />
-    <None Include="wwwroot\lib\select2\js\i18n\pt-BR.js" />
-    <None Include="wwwroot\lib\select2\js\select2.full.min.js" />
-    <None Include="wwwroot\lib\sweetalert2\sweetalert2.all.min.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="BuildBundlerMinifier" Version="3.2.435" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.1" />
@@ -104,7 +31,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
   </ItemGroup>
 
   <ItemGroup>
