#155 treatment place, cancer type, medicine and presences updated do use webpack

--- a/_source/LigaCancer/package.json
+++ b/_source/LigaCancer/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "aspnet-webpack": "^3.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
@@ -26,36 +26,37 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-dev-server": "^3.10.3",
     "webpack-fix-style-only-entries": "^0.2.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.7.0",
+    "@babel/polyfill": "^7.8.3",
     "@coreui/coreui": "^2.1.16",
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "bootstrap": "^4.3.1",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "bootstrap": "^4.4.1",
     "bootstrap-datepicker": "^1.9.0",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
     "datatables.net-buttons-bs4": "^1.6.1",
-    "dropzone": "^5.5.1",
+    "dropzone": "^5.7.0",
     "jquery": "3.4.1",
     "jquery-mask-plugin": "^1.14.16",
     "jquery-validation": "1.19.1",
     "jquery-validation-unobtrusive": "3.2.11",
-    "jszip": "^3.2.2",
+    "moment": "^2.24.0",
     "perfect-scrollbar": "^1.5.0",
-    "popper.js": "^1.16.0",
-    "select2": "^4.0.10",
-    "select2-theme-bootstrap4": "^0.2.0-beta.4",
-    "sweetalert2": "^8.19.0"
+    "popper.js": "^1.16.1",
+    "select2": "^4.0.13",
+    "select2-theme-bootstrap4": "^0.2.0-beta.6",
+    "sweetalert2": "^8.19.0",
+    "tempusdominus-bootstrap-4": "^5.1.2"
   }
 }
