--- a/_source/LigaCancer/package.json
+++ b/_source/LigaCancer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vi-talles",
+  "name": "rvcc-admin-system",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "aspnet-webpack": "^3.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
@@ -26,10 +26,10 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
@@ -38,11 +38,12 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
     "@coreui/coreui": "^2.1.16",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
     "bootstrap-datepicker": "^1.9.0",
+    "chart.js": "^2.9.3",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
     "datatables.net-buttons-bs4": "^1.6.1",
