#563 added size 2 and statistics below the table

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ _source/LigaCancer/wwwroot/dist/
 _source/LigaCancer/Logs/
 _design/CMS/
 _source/LigaCancer/node_modules/
+_design/coreui-free-bootstrap-admin-template-master/
