--- a/_source/LigaCancer/package.json
+++ b/_source/LigaCancer/package.json
@@ -21,7 +21,7 @@
     "extract-loader": "^3.1.0",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
@@ -32,7 +32,7 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-fix-style-only-entries": "^0.2.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
@@ -48,7 +48,7 @@
     "datatables.net-bs4": "^1.10.20",
     "datatables.net-buttons-bs4": "^1.6.1",
     "dropzone": "^5.7.0",
-    "jquery": "3.4.1",
+    "jquery": "^3.5.1",
     "jquery-mask-plugin": "^1.14.16",
     "jquery-validation": "1.19.1",
     "jquery-validation-unobtrusive": "3.2.11",
