Added birthday page and fixed some sonarqube bugs reported

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ _source/LigaCancer/Logs/
 _design/CMS/
 _source/LigaCancer/node_modules/
 _design/coreui-free-bootstrap-admin-template-master/
+_source/.sonarqube/
