--- a/_source/LigaCancer/package.json
+++ b/_source/LigaCancer/package.json
@@ -43,14 +43,14 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
     "bootstrap-datepicker": "^1.9.0",
-    "chart.js": "^2.9.3",
-    "datatables.net": "^1.10.20",
-    "datatables.net-bs4": "^1.10.20",
+    "chart.js": "^2.9.4",
+    "datatables.net": "^1.11.4",
+    "datatables.net-bs4": "^1.11.4",
     "datatables.net-buttons-bs4": "^1.6.1",
     "dropzone": "^5.7.0",
     "jquery": "^3.5.1",
     "jquery-mask-plugin": "^1.14.16",
-    "jquery-validation": "1.19.1",
+    "jquery-validation": "^1.19.3",
     "jquery-validation-unobtrusive": "3.2.11",
     "moment": "^2.24.0",
     "perfect-scrollbar": "^1.5.0",
