--- a/_source/LigaCancer/package.json
+++ b/_source/LigaCancer/package.json
@@ -47,13 +47,14 @@
     "chart.js": "^2.9.4",
     "datatables.net": "^1.11.4",
     "datatables.net-bs4": "^1.11.4",
+    "datatables.net-buttons": "^2.2.3",
     "datatables.net-buttons-bs4": "^1.6.1",
     "dropzone": "^5.7.0",
     "jquery": "^3.5.1",
     "jquery-mask-plugin": "^1.14.16",
-    "jquery-validation": "^1.19.3",
+    "jquery-validation": "^1.19.4",
     "jquery-validation-unobtrusive": "3.2.11",
-    "moment": "^2.24.0",
+    "moment": "^2.29.3",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
     "select2": "^4.0.13",
