--- a/_source/LigaCancer/package.json
+++ b/_source/LigaCancer/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "npx eslint .\\src\\scripts --fix",
+    "stylelint": "npx stylelint \"**/*.scss\" --fix",
     "build": "webpack --progress --profile --config webpack.dev.js",
     "watch": "webpack --progress --profile --watch --config webpack.dev.js",
     "production": "webpack --progress --profile --mode production --config webpack.prod.js"
@@ -18,6 +20,8 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^1.0.1",
+    "eslint": "^8.19.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
@@ -25,6 +29,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-webpack-plugin": "^2.1.0",
     "ts-loader": "^5.4.5",
     "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -52,9 +59,9 @@
     "dropzone": "^5.7.0",
     "jquery": "^3.5.1",
     "jquery-mask-plugin": "^1.14.16",
-    "jquery-validation": "^1.19.4",
+    "jquery-validation": "^1.19.5",
     "jquery-validation-unobtrusive": "3.2.11",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
     "select2": "^4.0.13",
